--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "mongodb": "^6.14.0",
+    "projeto_spotify": "file:..",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0"
