--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix back-end && npm install --prefix front-end && npm run build --prefix front-end",
-    "start": "npm run start --prefix back-end"
-  },
+  "build": "npm install --prefix back-end && npm install --prefix back-end/front-end && npm run build --prefix back-end/front-end",
+  "start": "npm run start --prefix back-end"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aos19/replica_Spotify.git"
